# reflective_equilibrium

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: pitch_multi_objective_re.md
docs/imaginary_paper/: README.md  main.tex  references.bib
docs/imaginary_paper/figures/: nano_banana_prompt.txt
docs/paper_v2/: main.tex
experiments/: rerender.py  trolley.py
runs/: trolley_20260526_143231.json  trolley_20260526_144124.json  trolley_20260526_144324.json  trolley_20260526_150953.json  trolley_20260526_150953.md  trolley_20260526_152855.json  trolley_20260526_152855.md  trolley_20260526_153113.json  trolley_20260526_153113.md
src/re_machine/: __init__.py  llm.py  loop.py  schemas.py  trace.py
src/re_machine/agents/: __init__.py  account_verifier.py  commitment_former.py  commitment_inferencer.py  faithfulness_verifier.py  principle_inferencer.py  systematicity_verifier.py
