[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re-machine"
version = "0.1.0"
description = "Reflective Equilibrium Machine — multi-agent LLM mechanization of Beisbart-style RE."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[tool.setuptools.packages.find]
where = ["src"]
